--- a/src/Progetto.css
+++ b/src/Progetto.css
@@ -1,82 +1,38 @@
-body {
-    font-family: Cambria;
-    font-size: 12pt;
-    text-align: justify;
-    margin: 3rem;
+body { font-family: Cambria; font-size: 12pt; text-align: justify; margin: 2rem 5rem; } 
+
+h1 { font-size: 200%; font-weight: bold; margin-bottom: 1rem; } 
+
+.versione{ display: block; font-size: 50%; margin-top: 0.5rem; font-weight: normal; } 
+
+h2 { font-size: 140%; border-bottom: 1px solid black; margin-bottom: 1rem; margin-top: 2rem; font-weight: normal; }
+
+p, li { margin-bottom: 0.5rem; } 
+
+ul,ol {
+  margin-left: 0;
+  padding-left: 1rem;
 }
-@media print {
-    body {
-        margin: 0;
-    }
+
+ul > li::marker {
+    content: '\2014  ';
 }
-h1 {
-    font-size: 200%;
-    font-weight: bold;
-    margin-bottom: 4.5pt;
-}
-.versione{
-    display: block;
-    font-size: 50%;
-    margin-top: 0.5rem;
-    font-weight: normal;
-}
-h2 {
-    font-size: 140%;
-    border-bottom: 1px solid black;
-    margin-bottom: 4pt;
-    margin-top: 22pt;
-    font-weight: normal;
-}
-p, li {
-    margin-bottom: 4pt;
-}
-li {
-    padding-left:1rem;
-}
-ol {
-    padding-left:2rem;
-}
-table {
-    width: 100%;
-    border: 2px solid black;
-    border-spacing: 0px;
-    border-collapse: collapse;
-}
-td, th {
-    border: 1px solid black;
-}
-.intestazione {
-    display: grid;
-    grid-template-columns: auto 10% ;
-    grid-template-rows: 1fr 1fr;
-    grid-template-areas:
-        "corso numero"
-        "anno numero";
-    background-color: ${colore!"blue"};
-    font-family: Cambria;
-    font-size: 26pt;
-    font-weight: bold;
-    color: white;
-    align-items: center;
-    padding: 5px;
-}
-.ncorso {
-    grid-area: corso;
-}
-.aa {
-    grid-area: anno;
-    font-style: italic;
-    font-size: 90%
-}
-.nprogetto {
-    grid-area: numero;
-    justify-self: center;
-}
-.linetocompile {
-    border-bottom: 0.5px solid gray;
-    width: 100%;
-    line-height: 2rem;
-}
-.break {
-    page-break-before: always;
-}
+
+table { width: 100%; border: 2px solid black; border-spacing: 0px; border-collapse: collapse; } 
+
+td, th { border: 1px solid black; } 
+
+.intestazione { margin: 1rem -2rem; background-color: rgb(46,116,181); text-align:center; border-radius: 5px;  font-size: 220%; font-weight: bold; color: white; padding: 5px; } 
+
+.ncorso { grid-area: corso; } 
+
+.aa {  font-style: italic; font-size: 90% } 
+
+.nprogetto {  font-size: 50% } 
+ 
+.linetocompile { border-bottom: 0.5px solid gray; width: 100%; line-height: 2rem; } .break { page-break-before: always; } 
+ 
+ @media print {
+ @page { size: A4; margin: 1cm; }
+ body {margin: 0 2rem}
+ .intestazione { margin: 1rem -1rem; }
+ }
